docs/7.56/md/abenabap_platform_glosry.md
---
title: "ABAP platform"
description: |
  An ABAP platform is a technical platform of products such as SAP S/4HANA(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensap_s4hana_glosry.htm 'Glossary Entry') or SAP BTP(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensap_btp_glosry.htm 'Glossary Entry') that is u
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_platform_glosry.htm"
abapFile: "abenabap_platform_glosry.htm"
keywords: ["do", "if", "try", "class", "types", "abenabap", "platform", "glosry"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP Glossary](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_glossary.htm) → 

ABAP platform

An ABAP platform is a technical platform of products such as [SAP S/4HANA](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensap_s4hana_glosry.htm "Glossary Entry") or [SAP BTP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensap_btp_glosry.htm "Glossary Entry") that is used to develop and run ABAP-based [application programs](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenapplication_program_glosry.htm "Glossary Entry"). It is implemented mainly using [ABAP systems](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_system_glosry.htm "Glossary Entry"), where the [Application Server ABAP (AS ABAP)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenas_abap_glosry.htm "Glossary Entry") provides the [ABAP runtime framework](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_runtime_frmwk_glosry.htm "Glossary Entry") for the execution of applications. For development, the ABAP platform provides an [ABAP development environment](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_dev_envir_glosry.htm "Glossary Entry"). The following types of ABAP platforms can be distinguished:

-   [ABAP platform classic](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_platform_classic_glosry.htm "Glossary Entry")
    
    ABAP developments are done in [classic ABAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenclassic_abap_glosry.htm "Glossary Entry") that is unrestricted regarding [ABAP language versions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_version_glosry.htm "Glossary Entry"), usage of tools and access to other [repository objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrepository_object_glosry.htm "Glossary Entry").
    
-   [ABAP platform strict](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_platform_strict_glosry.htm "Glossary Entry")
    
    ABAP developments are done in [strict ABAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenstrict_abap_glosry.htm "Glossary Entry") that is restricted regarding [ABAP language versions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_version_glosry.htm "Glossary Entry"), usage of tools and access to other [repository objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrepository_object_glosry.htm "Glossary Entry").
    

Different SAP products are based on variants of ABAP platforms:

-   [SAP S/4HANA](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensap_s4hana_glosry.htm "Glossary Entry") is based on ABAP platform classic.
-   [SAP BTP ABAP environment](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensap_btp_abap_env_glosry.htm "Glossary Entry") is a standalone ABAP platform strict.
-   [SAP S/4HANA Cloud](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensap_s4hana_cloud_glosry.htm "Glossary Entry") is based on an ABAP platform strict named [ABAP platform cloud](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_platform_cloud_glosry.htm "Glossary Entry").

[→ More about](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_platform.htm)