docs/7.57/md/abenabap_platform_glosry.md
---
title: "ABAP Platform"
description: |
  An ABAP Platform is a technical platform for products such as SAP S/4HANA(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_s4hana_glosry.htm 'Glossary Entry') or SAP BTP(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_btp_glosry.htm 'Glossary Entry') that is
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_platform_glosry.htm"
abapFile: "abenabap_platform_glosry.htm"
keywords: ["do", "if", "try", "class", "types", "abenabap", "platform", "glosry"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP Glossary](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_glossary.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP Platform, ABENABAP_PLATFORM_GLOSRY, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0
ASuggestion for improvement:)

ABAP Platform

An ABAP Platform is a technical platform for products such as [SAP S/4HANA](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_s4hana_glosry.htm "Glossary Entry") or [SAP BTP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_btp_glosry.htm "Glossary Entry") that is used to develop and run ABAP-based [application programs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenapplication_program_glosry.htm "Glossary Entry"). It is implemented mainly using [ABAP systems](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_system_glosry.htm "Glossary Entry"), where the [Application Server ABAP (AS ABAP)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenas_abap_glosry.htm "Glossary Entry") provides the [ABAP runtime framework](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_runtime_frmwk_glosry.htm "Glossary Entry") for the execution of applications. For development, the ABAP Platform provides an [ABAP development environment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dev_envir_glosry.htm "Glossary Entry"). The following types of ABAP Platforms can be distinguished:

-   [ABAP Platform Classic](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_platform_classic_glosry.htm "Glossary Entry")
    
    ABAP developments are done in [classic ABAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclassic_abap_glosry.htm "Glossary Entry") that is unrestricted regarding [ABAP language versions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_version_glosry.htm "Glossary Entry"), usage of tools and access to other [repository objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrepository_object_glosry.htm "Glossary Entry").
    
-   [ABAP Platform Strict](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_platform_strict_glosry.htm "Glossary Entry")
    
    ABAP developments are done in [strict ABAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstrict_abap_glosry.htm "Glossary Entry") that is restricted regarding [ABAP language versions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_version_glosry.htm "Glossary Entry"), usage of tools and access to other [repository objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrepository_object_glosry.htm "Glossary Entry").
    

Different SAP products are based on variants of ABAP Platforms:

-   [SAP S/4HANA](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_s4hana_glosry.htm "Glossary Entry") is based on ABAP Platform Classic.
-   [SAP BTP ABAP Environment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_btp_abap_env_glosry.htm "Glossary Entry") is a standalone ABAP Platform Strict.
-   [SAP S/4HANA Cloud](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_s4hana_cloud_glosry.htm "Glossary Entry") is based on an ABAP Platform Strict named [ABAP Platform Cloud](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_platform_cloud_glosry.htm "Glossary Entry").

[→ More about](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_platform.htm)